# lottery-website

./: .gitignore  Address_Finish - Address_Finish.csv  Address_Finish(3).csv  Address_Finish.csv  OPTIMIZATION_SUMMARY.md  build_log.txt  deploy.sh  scratchcard.py  task.md.resolved  tmp_check_db.py  刮刮研究室_功能介紹報告.docx  台彩.csv  台灣彩券 台灣運彩異動明細.xlsx  運彩.csv
backend/: .env.example  CLOUDFLARE_CACHE_RULES.md  batch_geocode.py  check_sales.py  debug_admin.py  fallback_geocode.py  geocode_remaining.py  import_tgos.py  import_tgos_wgs84.py  main.py  migrate_db.py  migrate_indexes.py  migrate_to_postgres.py  pyproject.toml  requirements.txt  reset_password.py  scratchcard.db  server_log.txt  sync_all.py  sync_log.txt  temp_sync.py  test_auth.py  test_scratchcard.db  tmp_setup_pro.py
backend/app/: main.py
backend/app/api/: admin.py  analytics.py  auth.py  cache.py  (+14 more)
backend/backups/: scratchcard_2026-03-12_191505.db
backend/data/: videos.json
backend/scripts/: backup_db.py  deploy_vps.sh  export_tgos_csv.py  geocode_failed.txt  geocode_fix_failed.py  geocode_retailers.py  geocode_tgos.py  geocode_v3_improved.py  geocode_v3_log.txt  geocode_v3_output.txt  import_retailers.py  import_tgos_result.py  lottery-api.service  mechanics_push.py  mechanics_sync.py  migrate_merchant_inventory.py  migrate_merchant_inventory_v2.py  migrate_retailers.py  process_retailers.py  restore_coords.py  setup_service.sh  tgos_batch_1.csv  tgos_batch_all_1.csv  tgos_geocode_failed.txt
backend/tests/: conftest.py  test_crawler_service.py  test_map_api.py  test_scratchcard_api.py  test_videos_api.py
(+104 files in other folders)
